--- a/StockFeed/app/src/main/res/layout/fragment_main.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,27 +7,40 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@android:color/darker_gray"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <ImageButton
-        android:id="@+id/favorite_button"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@android:drawable/btn_star"
-        android:layout_alignParentTop="true"
-        android:background="#00ffffff" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity$FavoriteFragment"
+        android:background="@layout/bg_card">
 
+        <ImageButton
+            android:id="@+id/favorite_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@android:drawable/btn_star"
+            android:background="#00ffffff" />
 
+        <TextView
+            android:id="@+id/stock_name"
+            android:text="@string/stock_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
+        <ImageButton
+            android:id="@+id/action_refresh"
+            android:src="@android:drawable/btn_star_big_off"
+            android:title="@string/action_refresh"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="#00ffffff" />
+    </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/action_refresh"
-        android:icon="@drawable/ic_launcher"
-        android:title="@string/action_refresh"
-        android:showAsAction="always"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true" />
-
-
-</RelativeLayout>
+</FrameLayout>
