--- a/StockFeed/app/src/main/res/layout/fragment_unfave.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_unfave.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context=".MainActivity$UnfavoritesFragment">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -17,7 +17,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity$PlaceholderFragment">
+        tools:context=".MainActivity$UnfavoritesFragment">
 
         <ImageButton
             android:id="@+id/favorite_button"
