--- a/StockFeed/app/src/main/res/layout/fragment_unfave.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_unfave.xml
@@ -1,5 +1,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +6,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$UnfavoritesFragment">
+    android:background="@android:color/darker_gray"
+    tools:context=".MainActivity$FavoriteFragment"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:isScrollContainer="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -17,36 +19,38 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity$UnfavoritesFragment">
+        tools:context=".MainActivity$FavoriteFragment"
+        android:background="@layout/bg_card">
 
         <ImageButton
             android:id="@+id/favorite_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@android:drawable/btn_star"
-            android:layout_alignParentTop="true"
+            android:layout_weight=".15"
             android:background="#00ffffff" />
 
         <TextView
             android:id="@+id/stock_name"
-            android:text="@string/stock_name"
+            android:text="UNFAVE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentStart="false"
-            android:layout_gravity="left"
+            android:textAllCaps="true"
+            android:textSize="25px"
+            android:paddingTop="0dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
             />
 
         <ImageButton
             android:id="@+id/action_refresh"
             android:src="@android:drawable/btn_star_big_off"
             android:title="@string/action_refresh"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight=".15"
             android:background="#00ffffff" />
     </LinearLayout>
 
 </FrameLayout>
+
