--- a/StockFeed/app/src/main/res/layout/fragment_main.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_main.xml
@@ -1,56 +1,63 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@android:color/darker_gray"
-    tools:context=".MainActivity$FavoriteFragment"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
-    android:isScrollContainer="true">
+    android:background="#ffffff">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingBottom="300dp"
+        android:background="@android:color/darker_gray"
         tools:context=".MainActivity$FavoriteFragment"
-        android:background="@layout/bg_card">
+        android:orientation="vertical" >
 
-        <ImageButton
-            android:id="@+id/favorite_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/btn_star"
-            android:layout_weight=".15"
-            android:background="#00ffffff" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".MainActivity$FavoriteFragment"
+            android:background="@layout/bg_card"
+            android:layout_marginBottom="15dp">
 
-        <TextView
-            android:id="@+id/stock_name"
-            android:text="FAVORITES"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="true"
-            android:textSize="25px"
-            android:paddingTop="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            />
+            <ImageButton
+                android:id="@+id/favorite_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/btn_star"
+                android:layout_weight=".15"
+                android:background="#00ffffff" />
 
-        <ImageButton
-            android:id="@+id/action_refresh"
-            android:src="@android:drawable/btn_star_big_off"
-            android:title="@string/action_refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".15"
-            android:background="#00ffffff" />
+            <TextView
+                android:id="@+id/stock_name"
+                android:text="FAVORITES"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="25px"
+                android:paddingTop="0dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                />
+
+            <ImageButton
+                android:id="@+id/action_refresh"
+                android:src="@android:drawable/btn_star_big_off"
+                android:title="@string/action_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".15"
+                android:background="#00ffffff" />
+        </LinearLayout>
+
+
+
     </LinearLayout>
-
-</FrameLayout>
-
+</ScrollView>
