push push push push push push push push push push push push

--- a/StockFeed/app/src/main/res/layout/fragment_options.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_options.xml
@@ -31,7 +31,8 @@
             android:textSize="25px"
             android:paddingTop="0dp"
             android:paddingLeft="0dp"
-            android:paddingRight="0dp" />
+            android:paddingRight="0dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </FrameLayout>
 
