--- a/StockFeed/app/src/main/res/layout/fragment_main.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_main.xml
@@ -38,14 +38,15 @@
 
             <TextView
                 android:id="@+id/stock_name"
-                android:text="FAVORITES"
+                android:text="@string/stock_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
                 android:textSize="25px"
                 android:paddingTop="0dp"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp" />
+                android:paddingRight="15dp"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/action_refresh"
