--- a/StockFeed/app/src/main/res/layout/fragment_unfave.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_unfave.xml
@@ -45,7 +45,8 @@
                 android:textSize="25px"
                 android:paddingTop="0dp"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp" />
+                android:paddingRight="15dp"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/action_refresh"
