--- a/StockFeed/app/src/main/res/layout/fragment_main.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_main.xml
@@ -10,10 +10,17 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="300dp"
+        android:paddingBottom="3000dp"
         android:background="@android:color/darker_gray"
         tools:context=".MainActivity$FavoriteFragment"
         android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/test"
+            android:orientation="vertical">
+        </LinearLayout>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -58,5 +65,6 @@
                 android:background="#00ffffff"
                 android:scaleType="fitXY" />
         </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
