--- a/StockFeed/app/src/main/res/layout/fragment_main.xml
+++ b/StockFeed/app/src/main/res/layout/fragment_main.xml
@@ -10,22 +10,26 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="3000dp"
         android:background="@android:color/darker_gray"
         tools:context=".MainActivity$FavoriteFragment"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             tools:context=".MainActivity$FavoriteFragment"
             android:background="@layout/bg_card"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical"
+            android:id="@+id/layout"
+            android:baselineAligned="false"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/stock_name"
@@ -33,22 +37,151 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
-                android:textSize="25px"
-                android:paddingTop="0dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="25dp"
-                android:textStyle="bold" />
+                android:textSize="30dp"
+                android:paddingLeft="25sp"
+                android:paddingRight="15sp"
+                android:textStyle="bold"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:id="@+id/stock_price"
+                android:text="@string/stock_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_row="1"
+                android:layout_column="0" />
 
             <ImageButton
                 android:id="@+id/action_refresh"
                 android:src="@drawable/refresh"
                 android:title="@string/action_refresh"
-                android:layout_width="7dp"
-                android:layout_height="40dp"
-                android:layout_weight=".15"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:background="#00ffffff"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:layout_gravity="center_horizontal"
+                android:clickable="true"
+                android:layout_row="1"
+                android:layout_column="1" />
+
+        </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".MainActivity$FavoriteFragment"
+            android:background="@layout/bg_card"
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
+            android:id="@+id/layout2"
+            android:baselineAligned="false"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/stock2_name"
+                android:text="@string/stock_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:paddingLeft="25sp"
+                android:paddingRight="15sp"
+                android:textStyle="bold"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:id="@+id/stock2_price"
+                android:text="@string/stock_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_row="1"
+                android:layout_column="0" />
+
+            <ImageButton
+                android:id="@+id/action2_refresh"
+                android:src="@drawable/refresh"
+                android:title="@string/action_refresh"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="#00ffffff"
+                android:scaleType="fitXY"
+                android:layout_gravity="center_horizontal"
+                android:clickable="true"
+                android:layout_row="1"
+                android:layout_column="1" />
+
+        </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".MainActivity$FavoriteFragment"
+            android:background="@layout/bg_card"
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
+            android:id="@+id/layout3"
+            android:baselineAligned="false"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/stock3_name"
+                android:text="@string/stock_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:paddingLeft="25sp"
+                android:paddingRight="15sp"
+                android:textStyle="bold"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:id="@+id/stock3_price"
+                android:text="@string/stock_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_row="1"
+                android:layout_column="0" />
+
+            <ImageButton
+                android:id="@+id/action3_refresh"
+                android:src="@drawable/refresh"
+                android:title="@string/action_refresh"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="#00ffffff"
+                android:scaleType="fitXY"
+                android:layout_gravity="center_horizontal"
+                android:clickable="true"
+                android:layout_row="1"
+                android:layout_column="1" />
+
         </LinearLayout>
 
     </LinearLayout>
+
 </ScrollView>
